--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nuxtjs/supabase": "^1.4.6",
     "@nuxtjs/tailwindcss": "^6.13.1",
     "nuxt": "^3.15.2",
+    "v-wave": "^3.0.2",
     "vue": "latest",
     "vue-router": "latest"
   }
