--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxt/fonts": "^0.10.3",
     "@nuxt/icon": "^1.10.3",
     "@nuxtjs/supabase": "^1.4.6",
     "@nuxtjs/tailwindcss": "^6.13.1",
+    "@pinia/nuxt": "^0.9.0",
+    "axios": "^1.7.9",
     "nuxt": "^3.15.2",
+    "nuxt-mongoose": "^1.0.6",
+    "pinia": "^2.3.1",
     "v-wave": "^3.0.2",
     "vue": "latest",
     "vue-router": "latest"
